--- a/prebuilt-arc-haps51/README
+++ b/prebuilt-arc-haps51/README
@@ -1,4 +1,4 @@
 3.2-release
 ===========
 
-  NOTE: Synopsys Internal Use Only
+  Prebuilt binaries for users of Synopsys's HAPS51 Development System
