--- a/prebuilt-arc-ml509/README
+++ b/prebuilt-arc-ml509/README
@@ -1,4 +1,4 @@
 3.2-release
 ===========
 
-  NOTE: Synopsys Internal Use Only
+  Prebuilt binaries for users of the Xilinx ML509 Development System.
